Fix tab icons on small screen

--- a/src/ui/options/style.less
+++ b/src/ui/options/style.less
@@ -61,10 +61,6 @@ main {
 }
 
 .settings-icon-list {
-    align-items: center;
-    display: inline-flex;
-    justify-content: center;
-
     svg {
         fill: currentColor;
         height: 75%;
